--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="tel:+38 044 111 11 11">+38 044 111 11 11</a>
+      <a href="tel:+380441111111">+38 044 111 11 11</a>
       <button type="button">Online-booking</button>
     </header>
     <main>
@@ -44,10 +44,10 @@
       <section>
         <ul>
           <li>
-            <img src="img/img 1-2.jpg" alt="Haircut" width="270" height="445" />
+            <img src="img/img1-2.jpg" alt="Haircut" width="270" height="445" />
           </li>
           <li>
-            <img src="img/img 2-2.jpg" alt="Haircut" width="270" height="445" />
+            <img src="img/img2-2.jpg" alt="Haircut" width="270" height="445" />
           </li>
         </ul>
         <p>About</p>
@@ -159,7 +159,7 @@
         <ul>
           <li>
             <img
-              src="img/Rectangle 25-2.jpg"
+              src="img/Rectangle25-2.jpg"
               alt="barbers"
               width="270"
               height="360"
@@ -167,7 +167,7 @@
           </li>
           <li>
             <img
-              src="img/Rectangle 26-2.jpg"
+              src="img/Rectangle26-2.jpg"
               alt="barbers"
               width="270"
               height="360"
@@ -175,7 +175,7 @@
           </li>
           <li>
             <img
-              src="img/Rectangle 27-2.jpg"
+              src="img/Rectangle27-2.jpg"
               alt="barbers"
               width="270"
               height="360"
@@ -183,7 +183,7 @@
           </li>
           <li>
             <img
-              src="img/Rectangle 28-2.jpg"
+              src="img/Rectangle28-2.jpg"
               alt="barbers"
               width="270"
               height="360"
